--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,5 +3,6 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
+    width: 100%;
     min-height: 74px;
 }
