--- a/blocks/elements/__grid/elements__grid.css
+++ b/blocks/elements/__grid/elements__grid.css
@@ -7,3 +7,9 @@
     margin: 0;
     padding: 0;
 }
+
+@media screen and (max-width: 645px) {
+    .elements__grid {
+        grid-gap: 20px;
+    }
+  }
