--- a/blocks/page/__container/page__container.css
+++ b/blocks/page/__container/page__container.css
@@ -7,3 +7,9 @@
     margin: 0 auto;
     padding: 45px 0 60px;
 }
+
+@media screen and (max-width: 645px) {
+    .page__container{
+        padding-top: 28px 0 36px;
+    }
+}
