--- a/blocks/page/__content/page__content.css
+++ b/blocks/page/__content/page__content.css
@@ -4,3 +4,10 @@
     margin-bottom: 66px;
     width: 100%;
 }
+
+@media screen and (max-width: 645px) {
+    .page__content {
+        margin-top: 42px;
+        margin-bottom: 48px;
+    }
+  }
