--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -2,3 +2,11 @@
     width: 150px;
     height: 50px;
 }
+
+@media screen and (max-width: 645px) {
+    .profile__add-button {
+        padding: 0;
+        width: 100%;
+        height: 50px;
+    }
+}
