--- a/blocks/profile/__porfile-info/__description/profile__description.css
+++ b/blocks/profile/__porfile-info/__description/profile__description.css
@@ -4,3 +4,11 @@
     line-height: 22px;
     margin: 0;
 }
+
+@media screen and (max-width: 645px) {
+    .profile__description {
+        font-size: 14px;
+        line-height: 17px;
+        text-align: center;
+    }
+}
