--- a/blocks/profile/__porfile-info/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__porfile-info/__edit-button/profile__edit-button.css
@@ -1,4 +1,13 @@
 .profile__edit-button{
     width: 24px;
     height: 24px;
+    margin-left: 17px;
+}
+
+@media screen and (max-width: 645px) {
+    .profile__edit-button {
+        width: 18px;
+        height: 18px;
+        margin-left: 1px;
+    }
 }
