--- a/blocks/profile/__porfile-info/__name/profile__name.css
+++ b/blocks/profile/__porfile-info/__name/profile__name.css
@@ -5,3 +5,14 @@
     line-height: 1.33;
     margin: 0;
 }
+
+@media screen and (max-width: 645px) {
+    .profile__name {
+        font-size: 27px;
+        line-height: 56px;
+        /* or 207% */
+        text-align: center;
+    }
+}
+
+
