--- a/blocks/profile/__porfile-info/profile__profile-info.css
+++ b/blocks/profile/__porfile-info/profile__profile-info.css
@@ -4,3 +4,11 @@
     margin-left: 30px;
     margin-right: 17px;
 }
+
+@media screen and (max-width: 645px) {
+    .profile__profile-info {
+        flex-direction: column;
+        align-items: center;
+        margin: 14px 0 36px;
+    }
+}
