--- a/pages/index.css
+++ b/pages/index.css
@@ -4,13 +4,15 @@
 @import url(../blocks/page/__container/page__container.css);
 @import url(../blocks/page/__header/page__header.css);
 @import url(../blocks/header/header.css);
-@import url(../blocks/header/__logo.css);
+@import url(../blocks/header/__line/header__line.css);
+@import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/page/__content/page__content.css);
 @import url(../blocks/content/content.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__passport/profile__passport.css);
 @import url(../blocks/profile/__porfile-info/profile__profile-info.css);
+@import url(../blocks/profile/__name-button/profile__name-button.css);
 @import url(../blocks/profile/__porfile-info/__name/profile__name.css);
 @import url(../blocks/profile/__porfile-info/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__porfile-info/__description/profile__description.css);
