--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,6 +1,14 @@
 .profile__add-button{
     width: 150px;
     height: 50px;
+    border: 2px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 2px;
+}
+
+.profile__add-button:hover{
+    opacity: 0.7;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 645px) {
