--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -2,6 +2,12 @@
     width: 24px;
     height: 24px;
     margin-left: 17px;
+    margin-top: 7px;
+}
+
+.profile__edit-button:hover{
+    opacity: 0.7;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 645px) {
