--- a/pages/index.css
+++ b/pages/index.css
@@ -13,9 +13,9 @@
 @import url(../blocks/profile/__passport/profile__passport.css);
 @import url(../blocks/profile/__porfile-info/profile__profile-info.css);
 @import url(../blocks/profile/__name-button/profile__name-button.css);
-@import url(../blocks/profile/__porfile-info/__name/profile__name.css);
-@import url(../blocks/profile/__porfile-info/__edit-button/profile__edit-button.css);
-@import url(../blocks/profile/__porfile-info/__description/profile__description.css);
+@import url(../blocks/profile/__name/profile__name.css);
+@import url(../blocks/profile/__edit-button/profile__edit-button.css);
+@import url(../blocks/profile/__description/profile__description.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/elements/_grid/elements_grid.css);
@@ -25,7 +25,16 @@
 @import url(../blocks/element/__info/element__info.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__button/element__button.css);
-@import url(../blocks/element/__button-image/element__button-image.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/page/__footer/page__footer.css);
-@import url(../blocks/footer/__text/footer__text.css)
+@import url(../blocks/footer/__text/footer__text.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__card/popup__card.css);
+@import url(../blocks/popup/__close-button/popup__close-button.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__field/popup__field.css);
+@import url(../blocks/popup/__text/popup__text.css);
+@import url(../blocks/popup/__submit-button/popup__submit-button.css);
+@import url(../blocks/popup/__submit-button-text/pupup__submit-button-text.css);
+@import url(../blocks/popup/_active/popup_active.css);
+
