Попытка 1, Кнопка добавить

--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -4,6 +4,9 @@
     border: 2px solid #FFFFFF;
     box-sizing: border-box;
     border-radius: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .profile__add-button:hover{
