--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -4,13 +4,13 @@
     font-size: 42px;
     line-height: 1.33;
     margin: 0;
+    max-width: 500px;
 }
 
 @media screen and (max-width: 645px) {
     .profile__name {
         font-size: 27px;
         line-height: 56px;
-        /* or 207% */
         text-align: center;
     }
 }
