--- a/blocks/profile/__passport/profile__passport.css
+++ b/blocks/profile/__passport/profile__passport.css
@@ -1,6 +1,7 @@
 .profile__passport{
     display: flex;
     align-items: center;
+    max-width: 500px;
 }
 
 @media screen and (max-width: 645px) {
