--- a/pages/index.css
+++ b/pages/index.css
@@ -17,6 +17,7 @@
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__description/profile__description.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/profile/__cross/profile__cross.css);
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/elements/_grid/elements_grid.css);
 @import url(../blocks/elements/__grid/elements__grid.css);
