--- a/blocks/element/__button/element__button.css
+++ b/blocks/element/__button/element__button.css
@@ -2,9 +2,12 @@
     width: 20.76px;
     height: 18.13px;
     margin: 0;
+    background: transparent;
+    background-image: url(../../../images/Group.svg);
+    border: none;
 }
 
 .element__button:hover{
-    opacity: 0.7;
+    opacity: 0.6;
     cursor: pointer;
 }
