--- a/blocks/footer/__text/footer__text.css
+++ b/blocks/footer/__text/footer__text.css
@@ -2,6 +2,15 @@
     font-family: Inter;
     font-size: 18px;
     line-height: 22px;
-
+    margin: 0;
     color: #545454;
+}
+
+@media screen and (max-width: 645px) {
+    .footer__text{
+        font-family: 'Inter';
+        font-size: 14px;
+        line-height: 17px;
+        padding-left: 19px;
+    }
 }
