--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -4,7 +4,9 @@
 }
 
 @media screen and (max-width: 645px) {
-    .header__logo {
-      padding-left: 27px;
-    }
+  .header__logo {
+    padding-left: 27px;
+    width: 103.74px;
+    height: 24.4px;
   }
+}
