--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,5 +4,6 @@
     justify-content: space-between;
     align-items: flex-start;
     width: 100%;
-    min-height: 74px;
+    padding-bottom: 40.6px;
+    border-bottom: 1px solid #545454;
 }
