--- a/blocks/page/__container/page__container.css
+++ b/blocks/page/__container/page__container.css
@@ -10,6 +10,6 @@
 
 @media screen and (max-width: 645px) {
     .page__container{
-        padding-top: 28px 0 36px;
+        padding: 28px 0 36px;
     }
 }
