--- a/blocks/popup/__card/popup__card.css
+++ b/blocks/popup/__card/popup__card.css
@@ -1,8 +1,13 @@
 .popup__card{
-    width: 100%;
     max-width: 430px;
     background: #FFFFFF;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     position: relative;
+}
+
+@media screen and (max-width: 500px) {
+    .popup__card{
+        width: calc(100% - 30px);
+    }
 }
