--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,14 +1,28 @@
 .popup__close-button{
+    background: url(../../../images/Close_Icon.svg);
+    background-position: center;
+    border: none;
     position: absolute;
     top: 0;
     right: 0;
     width: 40.7px;
     height: 40.7px;
-    transform: rotate(45deg);
-    transform: translate(32px, -32px);
+    transform: translate(36px, -36px);
 }
 
 .popup__close-button:hover{
-    opacity: 0.5;
+    opacity: 0.6;
     cursor: pointer;
+}
+
+@media screen and (max-width: 500px) {
+    .popup__close-button{
+        transform: translate(10px, -40px);
+    }
+}
+
+@media screen and (max-height: 375px) {
+    .popup__close-button{
+        transform: translate(40px, -10px);
+    }
 }
