--- a/blocks/popup/__submit-button-text/pupup__submit-button-text.css
+++ b/blocks/popup/__submit-button-text/pupup__submit-button-text.css
@@ -1,5 +1,5 @@
 .pupop__submit-button-text{
-    font-family: Inter;
+    font-family: 'Inter';
     font-size: 18px;
     line-height: 22px;
     color: #FFFFFF;
