--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -1,5 +1,6 @@
 .popup__submit-button{
-    min-width: 358px;
+    max-width: 358px;
+    width: calc(100% - 72px);
     height: 50.15px;
     background: #000000;
     border-radius: 2px;
@@ -7,9 +8,13 @@
     justify-content: center;
     align-items: center;
     margin: 0 36px 37px;
+    font-family: 'Inter';
+    font-size: 18px;
+    line-height: 22px;
+    color: #FFFFFF;
 }
 
 .popup__submit-button:hover{
-    opacity: 0.5;
+    opacity: 0.6;
     cursor: pointer;
 }
