--- a/blocks/popup/__text/popup__text.css
+++ b/blocks/popup/__text/popup__text.css
@@ -1,11 +1,16 @@
 .popup__text{
+    box-sizing: border-box;
+    width: calc(100% - 72px);
+    font-family: 'Inter';
     font-size: 14px;
     line-height: 17px;
     color: #000000;
-    margin: 0;
+    margin: 0 36px 30px;
     padding: 0;
-    border: 2px;
-    width: 100%;
-    min-height: 27px;
+    border: none;
     border-bottom: 1px solid rgba(0,0,0,0.2);
+}
+
+.popup__text:nth-last-child(2n){
+    margin-bottom: 48px;
 }
