--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,4 +1,5 @@
 .profile__add-button{
+    background: transparent;
     width: 150px;
     height: 50px;
     border: 2px solid #FFFFFF;
@@ -7,10 +8,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0;
 }
 
 .profile__add-button:hover{
-    opacity: 0.7;
+    opacity: 0.6;
     cursor: pointer;
 }
 
