--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,12 +1,17 @@
 .profile__edit-button{
+    background: transparent;
     width: 24px;
     height: 24px;
     margin-left: 17px;
-    margin-top: 7px;
+    border: 1px solid #FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
 }
 
 .profile__edit-button:hover{
-    opacity: 0.7;
+    opacity: 0.6;
     cursor: pointer;
 }
 
@@ -14,6 +19,6 @@
     .profile__edit-button {
         width: 18px;
         height: 18px;
-        margin-left: 1px;
+        margin-left: 5px;
     }
 }
