--- a/blocks/profile/__passport/profile__passport.css
+++ b/blocks/profile/__passport/profile__passport.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     max-width: 700px;
+    overflow-wrap: break-word;
 }
 
 @media screen and (max-width: 645px) {
