--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,7 +1,7 @@
 .profile__edit-button{
     background: transparent;
-    width: 24px;
-    height: 24px;
+    min-width: 24px;
+    min-height: 24px;
     margin-left: 17px;
     border: 1px solid #FFFFFF;
     display: flex;
