--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,5 +5,5 @@
     align-items: flex-start;
     width: 100%;
     padding-bottom: 40.6px;
-    border-bottom: 1px solid #545454;
+    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
