--- a/blocks/popup/__text/popup__text.css
+++ b/blocks/popup/__text/popup__text.css
@@ -6,7 +6,7 @@
     line-height: 17px;
     color: #000000;
     margin: 0 36px 30px;
-    padding: 0;
+    padding: 0 0 13.26px 0;
     border: none;
     border-bottom: 1px solid rgba(0,0,0,0.2);
 }
