--- a/blocks/footer/__text/footer__text.css
+++ b/blocks/footer/__text/footer__text.css
@@ -8,7 +8,7 @@
 
 @media screen and (max-width: 645px) {
     .footer__text{
-        font-family: 'Inter';
+        font-family: 'Inter', Arial, sans-serif;
         font-size: 14px;
         line-height: 17px;
         padding-left: 19px;
