--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -8,7 +8,7 @@
     justify-content: center;
     align-items: center;
     margin: 0 36px 37px;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-size: 18px;
     line-height: 22px;
     color: #FFFFFF;
