--- a/blocks/popup-image/__title/popup-image__title.css
+++ b/blocks/popup-image/__title/popup-image__title.css
@@ -1,4 +1,4 @@
-.image-popup__title{
+.popup-image__title{
     font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: normal;
