--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,5 +1,6 @@
-.popup-add__card{
+.popup__form{
     max-width: 430px;
+    width: 100%;
     background: #FFFFFF;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
@@ -7,7 +8,7 @@
 }
 
 @media screen and (max-width: 500px) {
-    .popup-add__card{
+    .popup__form{
         width: calc(100% - 30px);
     }
 }
