--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,4 @@
-.popup__text{
+.popup__input{
     box-sizing: border-box;
     width: calc(100% - 72px);
     font-family: 'Inter', Arial, sans-serif;
@@ -9,8 +9,4 @@
     padding: 0 0 13.26px 0;
     border: none;
     border-bottom: 1px solid rgba(0,0,0,0.2);
-}
-
-.popup__text:nth-last-child(2n){
-    margin-bottom: 48px;
 }
