--- a/pages/index.css
+++ b/pages/index.css
@@ -30,19 +30,18 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/page/__footer/page__footer.css);
 @import url(../blocks/footer/__text/footer__text.css);
-@import url(../blocks/popup-edit/popup-edit.css);
-@import url(../blocks/popup-edit/__card/popup__card.css);
-@import url(../blocks/popup-edit/__close-button/popup__close-button.css);
-@import url(../blocks/popup-edit/__title/popup__title.css);
-@import url(../blocks/popup-edit/__text/popup__text.css);
-@import url(../blocks/popup-edit/__submit-button/popup__submit-button.css);
-@import url(../blocks/popup-edit/__submit-button-text/pupup__submit-button-text.css);
-@import url(../blocks/popup-edit/_active/popup_active.css);
-@import url(../blocks/popup-add/popup-add.css);
-@import url(../blocks/popup-add/__card/popup-add__card.css);
-@import url(../blocks/popup-add/__submit-button/popup-add__submit-button.css);
-@import url(../blocks/popup-add/__submit-button-text/pupup__submit-button-text.css);
-@import url(../blocks/popup-add/__title/popup-add__title.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__button/popup__button.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__section/popup__section.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__input/_error/popup__input_error.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
+@import url(../blocks/popup/__input-error/_active/popup__input-error_active.css);
+@import url(../blocks/popup/__submit-button/popup__submit-button.css);
+@import url(../blocks/popup/__submit-button/_disabled/popup__submit-button_disabled.css);
+@import url(../blocks/popup/_active/popup_active.css);
 @import url(../blocks/popup-image/popup-image.css);
 @import url(../blocks/popup-image/__pic/popup-image__pic.css);
 @import url(../blocks/popup-image/__image/popup-image__image.css);
