--- a/src/blocks/element/__delete/element__delete.css
+++ b/src/blocks/element/__delete/element__delete.css
@@ -9,6 +9,7 @@
     background-image: url(../../../images/Trash.svg);
     background-repeat: no-repeat;
     border: none;
+    outline: none;
     z-index: 1;
 }
 
