--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -2,6 +2,7 @@
     background: url(../../../images/Close_Icon.svg);
     background-position: center;
     border: none;
+    outline: none;
     position: absolute;
     top: 0;
     right: 0;
