--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -8,5 +8,6 @@
     margin: 0 36px 30px;
     padding: 0 0 13.26px 0;
     border: none;
+    outline: none;
     border-bottom: 1px solid rgba(0,0,0,0.2);
 }
