--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -8,6 +8,9 @@
 @import url(../blocks/page/__content/page__content.css);
 @import url(../blocks/content/content.css);
 @import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__photo-container/profile__photo-container.css);
+@import url(../blocks/profile/__change-photo-overlay/profile__change-photo-overlay.css);
+@import url(../blocks/profile/__change-photo/profile__change-photo.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__passport/profile__passport.css);
 @import url(../blocks/profile/__porfile-info/profile__profile-info.css);
@@ -23,8 +26,11 @@
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__delete/element__delete.css);
+@import url(../blocks/element/__delete/_inactive/element__delete_inactive.css);
 @import url(../blocks/element/__info/element__info.css);
 @import url(../blocks/element/__title/element__title.css);
+@import url(../blocks/element/__like-section/element__like-section.css);
+@import url(../blocks/element/__likes/element__likes.css);
 @import url(../blocks/element/__button/element__button.css);
 @import url(../blocks/element/__button/_active/element__button_active.css);
 @import url(../blocks/footer/footer.css);
@@ -34,12 +40,14 @@
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__button/popup__button.css);
 @import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__title/_submit-form/popup__title_submit-form.css);
 @import url(../blocks/popup/__section/popup__section.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__input/_error/popup__input_error.css);
 @import url(../blocks/popup/__input-error/popup__input-error.css);
 @import url(../blocks/popup/__input-error/_active/popup__input-error_active.css);
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
+@import url(../blocks/popup/__submit-button/_submit-form/popup__submit-button_submit-form.css);
 @import url(../blocks/popup/__submit-button/_disabled/popup__submit-button_disabled.css);
 @import url(../blocks/popup/_active/popup_active.css);
 @import url(../blocks/popup-image/popup-image.css);
