--- a/main.css
+++ b/main.css
@@ -8,10 +8,10 @@
 .page__content{margin:40px auto 66px;width:100%}@media screen and (max-width:645px){.page__content{margin-top:42px;margin-bottom:48px}}
 .content{display:flex;flex-direction:column}
 .profile{width:100%;display:flex;justify-content:space-between;align-items:center}@media screen and (max-width:645px){.profile{flex-direction:column;width:282px;margin:auto}}
-.profile__photo-container{display:flex;position:relative;flex-direction:column;justify-content:center}
+.profile__photo-container{position:relative;width:120px;height:120px;overflow:hidden}
 .profile__change-photo-overlay{background:transparent;position:absolute;width:100%;height:100%;z-index:2}.profile__change-photo-overlay:hover{background:rgba(0,0,0,.8);cursor:pointer}.profile__change-photo-overlay:hover .profile__change-photo{opacity:1}
-.profile__change-photo{max-width:26px;max-height:26px;position:absolute;top:50%;left:50%;z-index:3;opacity:0}
-.profile__avatar{max-width:120px;max-height:120px;border-radius:50%;position:relative}
+.profile__change-photo{max-width:26px;max-height:26px;position:absolute;top:40%;left:40%;z-index:3;opacity:0}
+.profile__avatar{width:100%;height:100%;-o-object-fit:cover;object-fit:cover;border-radius:50%}
 .profile__passport{display:flex;align-items:center;max-width:700px;overflow-wrap:break-word}@media screen and (max-width:645px){.profile__passport{flex-direction:column}}
 .profile__profile-info{display:flex;flex-direction:column;margin-left:30px;margin-right:17px}@media screen and (max-width:645px){.profile__profile-info{flex-direction:column;align-items:center;margin:14px 0 36px}}
 .profile__name-button{width:100%;display:flex;justify-content:space-between;align-items:center}
